# rusty-maths

./: AGGRESSIVE_REFACTORING.md  CLAUDE.md  Cargo.toml  README.md  REFACTORING_SUMMARY.md  REFACTORING_TODO.md  test_debug.txt
.github/workflows/: rust.yml
benches/: equation_analyzer.rs
src/: lib.rs
src/equation_analyzer/: COMPLEX_NUMBERS_TODO.txt  calculator.rs  catalog.rs  definitions.rs  eq_data_builder.rs  errors.rs  fully_streaming_calculator.rs  linear_analysis.rs  mod.rs  operands.rs  parser.rs  quadratic_analysis.rs  rpn.rs  streaming_calculator.rs  tests.rs  tokenizer.rs
src/equation_analyzer/analyzers/: analyzer_helper.rs  linear_analysis.rs  mod.rs  quadratic_analysis.rs
src/equation_analyzer/core/: evaluator.rs  mod.rs  parser.rs  streaming_parser.rs  streaming_tokenizer.rs  vec_tokenizer.rs
src/equation_analyzer/full_pipeline/: README.md  calculator.rs  evaluator.rs  mod.rs  parser.rs
src/equation_analyzer/hybrid_pipeline/: README.md  calculator.rs  evaluator.rs  mod.rs  parser.rs  tokenizer.rs
src/equation_analyzer/pipeline/: README.md  evaluator.rs  fully_streaming_evaluator.rs  fully_streaming_parser.rs  mod.rs  parser.rs  streaming_evaluator.rs  streaming_parser.rs  streaming_tokenizer.rs  tokenizer.rs
src/equation_analyzer/structs/: mod.rs  operands.rs  token.rs  tokenizer_state.rs
src/equations/: mod.rs
src/geometry/: circle.rs  mod.rs  traits.rs
src/gradient_descent/: mod.rs
src/linear_algebra/: mod.rs
src/neural_network/: activations.rs  layer.rs  mod.rs  network.rs
src/statistics/: mod.rs
src/utilities/: mod.rs
(+8 files in other folders)
