[package]
name = "rusty-maths"
version = "0.1.0"
edition = "2021"

[lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.11"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "equation_analyzer"
harness = false
